compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_string_dyn_lhs.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "% all runtime checked\nvar c : char\nvar c1 : char(1)\nvar c5 : char(5)\nvar c255 : char(255)\nvar c_dyn : char(*)\nvar s : string\nvar s1 : string(1)\nvar s5 : string(5)\nvar s_dyn : string(*)\n\nvar _v00 : string(*) := c\nvar _v01 : string(*) := c1\nvar _v02 : string(*) := c5\nvar _v03 : string(*) := c255\nvar _v04 : string(*) := c_dyn\nvar _v05 : string(*) := s\nvar _v06 : string(*) := s1\nvar _v07 : string(*) := s5\nvar _v08 : string(*) := s_dyn\n"

---
"c"@(FileId(1), 26..27) [Declared]: char
"c1"@(FileId(1), 39..41) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"c5"@(FileId(1), 56..58) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"c255"@(FileId(1), 73..77) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(2)))
"c_dyn"@(FileId(1), 94..99) [Declared]: char_n Any
"s"@(FileId(1), 114..115) [Declared]: string
"s1"@(FileId(1), 129..131) [Declared]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(3)))
"s5"@(FileId(1), 148..150) [Declared]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(4)))
"s_dyn"@(FileId(1), 167..172) [Declared]: string_n Any
"_v00"@(FileId(1), 190..194) [Declared]: string_n Any
"_v01"@(FileId(1), 216..220) [Declared]: string_n Any
"_v02"@(FileId(1), 243..247) [Declared]: string_n Any
"_v03"@(FileId(1), 270..274) [Declared]: string_n Any
"_v04"@(FileId(1), 299..303) [Declared]: string_n Any
"_v05"@(FileId(1), 329..333) [Declared]: string_n Any
"_v06"@(FileId(1), 355..359) [Declared]: string_n Any
"_v07"@(FileId(1), 382..386) [Declared]: string_n Any
"_v08"@(FileId(1), 409..413) [Declared]: string_n Any
"<root>"@(dummy) [Declared]: <error>

