compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_string_dyn_rhs.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "% all runtime checked\nvar s_dyn : string(*)\n\nvar _v00 : char := s_dyn\nvar _v01 : char(1) := s_dyn\nvar _v02 : char(5) := s_dyn\nvar _v03 : char(255) := s_dyn\nvar _v04 : char(256) := s_dyn\nvar _v05 : char(*) := s_dyn\nvar _v06 : string := s_dyn\nvar _v07 : string(1) := s_dyn\nvar _v08 : string(5) := s_dyn\nvar _v09 : string(*) := s_dyn\n"

---
"s_dyn"@(FileId(1), 26..31) [Declared]: string_n Any
"_v00"@(FileId(1), 49..53) [Declared]: char
"_v01"@(FileId(1), 74..78) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"_v02"@(FileId(1), 102..106) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(3)))
"_v03"@(FileId(1), 130..134) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(5)))
"_v04"@(FileId(1), 160..164) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(7)))
"_v05"@(FileId(1), 190..194) [Declared]: char_n Any
"_v06"@(FileId(1), 218..222) [Declared]: string
"_v07"@(FileId(1), 245..249) [Declared]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(11)))
"_v08"@(FileId(1), 275..279) [Declared]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(13)))
"_v09"@(FileId(1), 305..309) [Declared]: string_n Any
"<root>"@(dummy) [Declared]: <error>

