compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__bare_var_decl-2.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "const k k := 3"

---
"k"@(FileId(1), 6..7) [Declared]: <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 10..12: cannot assign into expression
| note in file FileId(1) for 8..9: not a reference to a variable
