compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__bare_var_decl.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k k := 3"
---
"k"@(FileId(1), 4..5) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

