compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_and.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "\n    % Compatibility with all variant of integers\n    var i : int\n    var n : nat\n    var _ii := i and i\n    var _in := i and n\n    var _ni := n and i\n    var _nn := n and n\n"

---
"i"@(FileId(1), 58..59) [Declared]: int
"n"@(FileId(1), 74..75) [Declared]: nat
"_ii"@(FileId(1), 90..93) [Declared]: nat
"_in"@(FileId(1), 113..116) [Declared]: nat
"_ni"@(FileId(1), 136..139) [Declared]: nat
"_nn"@(FileId(1), 159..162) [Declared]: nat
"<root>"@(dummy) [Declared]: <error>

