compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_not.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatibility with all variant of integers\n    var i : int\n    var n : nat\n    var _i := not i\n    var _n := not n\n"

---
"i"@(FileId(1), 58..59) [Declared]: ref_mut int
"n"@(FileId(1), 74..75) [Declared]: ref_mut nat
"_i"@(FileId(1), 90..92) [Declared]: ref_mut nat
"_n"@(FileId(1), 110..112) [Declared]: ref_mut nat
"<root>"@(dummy) [Declared]: <error>

