compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_shl.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatiblitly with all variant of integers\n    var i : int\n    var n : nat\n    var _ii := i shl i\n    var _in := i shl n\n    var _ni := n shl i\n    var _nn := n shl n\n"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Int(Int))
    Idx::<Type>(1) TyRef(Nat(Nat))
def_kinds:
    DefId(0) Var(TyRef(Int(Int)))
    DefId(1) Var(TyRef(Nat(Nat)))
    DefId(2) Var(TyRef(Nat(Nat)))
    DefId(3) Var(TyRef(Nat(Nat)))
    DefId(4) Var(TyRef(Nat(Nat)))
    DefId(5) Var(TyRef(Nat(Nat)))
